--- a/Mobile_App/www/templates/settings.html
+++ b/Mobile_App/www/templates/settings.html
@@ -18,7 +18,7 @@
                         <span ng-class="getFontClass()" ng-style="selectedFontsize">Cache News</span>
                     </li>
                     <li>
-                        <sub>Saves temporarily the 10 first articles</sub>
+                        <sub>Saves temporarily the first 10 articles</sub>
                     </li>
                 </ul>
             </ion-toggle>
