--- a/Mobile_App/www/templates/article.html
+++ b/Mobile_App/www/templates/article.html
@@ -34,11 +34,13 @@
         </ion-list>
         <div class="spacer" style="width: 300px; height: 20px;"></div>
 
-        <div ng-if="user.isJournalist">
-            <p>Notes:</p>
+        <div ng-class="getBackgroundClass()" ng-if="user.isJournalist">
+            <p ng-class="getFontClass()">Notes:</p>
             <ion-item style="height:200px;">
                 <textarea type="note" ng-model="currentNotes.note" ng-blur="saveNotes()" style="width:100%; height:100%;"></textarea>
             </ion-item>
         </div>
+        <div class="spacer" style="width: 300px; height: 20px;"></div>
+
     </ion-content>
 </ion-view>
