--- a/Mobile_App/www/templates/newsFeed.html
+++ b/Mobile_App/www/templates/newsFeed.html
@@ -1,27 +1,26 @@
-<ion-view title="News Feed" id="page1">
-    <ion-header-bar ng-class="getBackgroundClass()" class="bar bar-subheader item-input-inset">
-        <label ng-if="selectedSources.sources.length > 0 && isOnline" class="item-input-wrapper" id="newsFeed-search1" name="searchArticles">
+<ion-view title="News Feed" id="page1" ng-controller="newsFeedCtrl">
+    <ion-header-bar ng-show="selectedSources.sources.length > 0 || cachedArticles.articles.length > 0" ng-class="getBackgroundClass()" class="bar bar-subheader item-input-inset">
+        <label ng-if="isOnline" class="item-input-wrapper" id="newsFeed-search1" name="searchArticles">
             <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="onlineSearch">
+            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="input.onlineSearch">
         </label>
-        <label ng-if="cachedArticles.articles.length > 0 && !isOnline" ng-if="cachedArticles.articles.length > 0 && !isOnline" class="item-input-wrapper"
+        <label ng-if="!isOnline" class="item-input-wrapper"
             id="newsFeed-search1" name="searchArticles">
             <i class="icon ion-search placeholder-icon"></i>
-            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="offlineSearch">
+            <input type="search" class="placeholderLetters" placeholder="Search articles" ng-model="input.offlineSearch">
         </label>
     </ion-header-bar>
-    <ion-content padding="false" overflow-scroll="false" class="has-header generalPadding" ng-controller="newsFeedCtrl" ng-class="getBackgroundClass()">
+    <ion-content padding="false" overflow-scroll="false" class="has-header generalPadding" ng-class="getBackgroundClass()">
         <ion-refresher ng-if="selectedSources.sources.length > 0  && isOnline" pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
-        <ion-refresher ng-if="cachedArticles.articles.length > 0 && !isOnline" pulling-text="Pull to refresh..." on-refresh="doRefresh()"></ion-refresher>
         <div ng-if="selectedSources.sources.length > 0 && isOnline" ng-class="getBackgroundClass()">
-            <ion-list id="newsFeed-list9" ng-repeat="article in articles | filter: { Title:onlineSearch }" ng-class="getBackgroundClass()">
-                <ion-item ng-show="!{{article.Deleted}}" class="item-thumbnail-left item-icon-right" ng-click="articleTapped()" ui-sref="eyeReader.article({article : article})"
+            <ion-list id="newsFeed-list9" ng-repeat="article in articles | filter: { Title:input.onlineSearch }" ng-class="getBackgroundClass()">
+                <ion-item ng-show="!isDeleted({{article.Id}})" class="item-thumbnail-left item-icon-right" ng-click="articleTapped()" ui-sref="eyeReader.article({id : article.Id})"
                     ng-class="getBackgroundClass()">
                     <img alt="img" ng-src="{{article.PictureSrc}}">
                     <h2 ng-style="fontsize" ng-class="getFontClass()">{{article.Title}}</h2>
                     <p ng-style="fontsizeSmaller" class="sideLetters">{{article.Content}}</p>
                     <i class="icon ion-ios-arrow-right icon-accessory"></i>
-                    <ion-option-button class="button-energized" ng-click="showReportOptions()">
+                    <ion-option-button ng-show="isOnline" class="button-energized" ng-click="showReportOptions()">
                         <ion-icon name="report" class="icon ion-alert-circled"></ion-icon>
                     </ion-option-button>
                     <ion-option-button class="button-assertive" ng-click="showDeleteConfirm({{article.Id}})">
@@ -39,8 +38,8 @@
             </ion-infinite-scroll>
         </div>
         <div ng-if="cachedArticles.articles.length > 0 && !isOnline" ng-class="getBackgroundClass()">
-            <ion-list id="newsFeed-list20" ng-repeat="article in cachedArticles.articles | filter: { Title:offlineSearch }" ng-class="getBackgroundClass()">
-                <ion-item ng-show="!{{article.Deleted}}" class="item-thumbnail-left item-icon-right" ng-click="articleTapped()" ui-sref="eyeReader.article({article : article})"
+            <ion-list id="newsFeed-list20" ng-repeat="article in cachedArticles.articles | filter: { Title:input.offlineSearch }" ng-class="getBackgroundClass()">
+                <ion-item ng-show="!isDeleted({{article.Id}})" class="item-thumbnail-left item-icon-right" ng-click="articleTapped()" ui-sref="eyeReader.article({id : article.Id})"
                     ng-class="getBackgroundClass()">
                     <img alt="img" ng-src="{{article.PictureSrc}}">
                     <h2 ng-style="fontsize" ng-class="getFontClass()">{{article.Title}}</h2>
@@ -59,22 +58,22 @@
         </div>
         <div ng-if="selectedSources.sources.length == 0 && isOnline">
             <ion-list>
-                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Swipe right to add sources.</p>
+                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Swipe right to add sources to read articles from.</p>
                 <div style="width:inherit; text-align: center; padding-top: 25%">
                     <i style="color: #90A4AE; font-size:1250%!important" class="icon ion-ios-glasses-outline"></i>
                 </div>
                 <h1 style="color: #90A4AE; font-size: 60px; text-align: center">Oops!</h1>
-                <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There is no source to read from.</h1>
+                <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There are no sources to read from.</h1>
             </ion-list>
         </div>
         <div ng-if="cachedArticles.articles.length == 0 && !isOnline">
             <ion-list>
-                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Connect to the internet, relaunch app and select sources in order to cache some articles.</p>
+                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Connect to the internet to cache or save articles in order to view them offline.</p>
                 <div style="width:inherit; text-align: center; padding-top: 25%">
                     <i style="color: #90A4AE; font-size:1250%!important" class="icon ion-ios-glasses-outline"></i>
                 </div>
                 <h1 style="color: #90A4AE; font-size: 60px; text-align: center">Oops!</h1>
-                <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There are no cached article to read.</h1>
+                <h1 style="color: #90A4AE; font-size: 15px; text-align: center">There are no cached articles to read.</h1>
             </ion-list>
         </div>
     </ion-content>
