--- a/Mobile_App/www/templates/statistics.html
+++ b/Mobile_App/www/templates/statistics.html
@@ -1,26 +1,37 @@
 <ion-view title="Statistics" id="page11">
     <ion-content padding="true" class="has-header generalPadding" ng-controller="statisticsCtrl" ng-class="getBackgroundClass()">
-        <div class="list">
-            <label class="item item-select item-select" ng-class="getBackgroundClass()">
-                <div class="input-label">
-                    <span ng-style="fontsize" ng-class="getFontClass()">Select Source</span>
-                </div>
-                <select ng-class="getFontClass()" ng-options="o.id as o.name for o in selectSource" ng-model="selectedSource"></select>
-            </label>
+        <div ng-if="isOnline">
+            <div class="list">
+                <label class="item item-select item-select" ng-class="getBackgroundClass()">
+                    <div class="input-label">
+                        <span ng-style="fontsize" ng-class="getFontClass()">Select Source</span>
+                    </div>
+                    <select ng-class="getFontClass()" ng-options="o.id as o.name for o in selectSource" ng-model="selectedSource"></select>
+                </label>
 
-            <label class="item item-input item-select" ng-class="getBackgroundClass()">
-                <div class="input-label">
-                    <span ng-style="fontsize" ng-class="getFontClass()">View Statistics</span>
-                </div>
-                <select ng-class="getFontClass()" ng-options="o.id as o.name for o in viewStatistics" ng-model="selectedStatistic"></select>
-            </label>
+                <label class="item item-input item-select" ng-class="getBackgroundClass()">
+                    <div class="input-label">
+                        <span ng-style="fontsize" ng-class="getFontClass()">View Statistics</span>
+                    </div>
+                    <select ng-class="getFontClass()" ng-options="o.id as o.name for o in viewStatistics" ng-model="selectedStatistic"></select>
+                </label>
+            </div>
+
+            <canvas class="chart chart-bar" chart-data="barData" chart-labels="barLbls" chart-colors="chartColors" chart-series="series"
+                style="width:100%; height:54%; margin-top:20%;" chart-click="onClick" ng-if="selectedSource==0"></canvas>
+
+            <canvas id="statisticsDoughnut" class="chart chart-doughnut" chart-data="doughnutData" chart-labels="doughnutLbls" style="width:100%; height:52%; margin-top:20%;"
+                ng-if="selectedSource!=0"></canvas>
         </div>
-
-        <canvas class="chart chart-bar" chart-data="barData" chart-labels="barLbls" chart-colors="chartColors" chart-series="series"
-            style="width:100%; height:54%; margin-top:20%;" chart-click="onClick" ng-if="selectedSource==0"></canvas>
-
-        <canvas id="statisticsDoughnut" class="chart chart-doughnut" chart-data="doughnutData" chart-labels="doughnutLbls" style="width:100%; height:52%; margin-top:20%;"
-            ng-if="selectedSource!=0"></canvas>
-
+        <div ng-if="!isOnline">
+            <ion-list>
+                <p style="color: #90A4AE;  font-size: 22px; text-align: center; padding-top: 10%">Connect to the internet to view available statistics.</p>
+                <div style="width:inherit; text-align: center; padding-top: 25%">
+                    <i style="color: #90A4AE; font-size:1250%!important" class="icon ion-stats-bars"></i>
+                </div>
+                <h1 style="color: #90A4AE; font-size: 60px; text-align: center">Oops!</h1>
+                <h1 style="color: #90A4AE; font-size: 15px; text-align: center">No internet connection!</h1>
+            </ion-list>
+        </div>
     </ion-content>
 </ion-view>
