--- a/Mobile_App/www/templates/article.html
+++ b/Mobile_App/www/templates/article.html
@@ -7,6 +7,7 @@
             <span class="boldLetters" ng-style="fontsize">{{article.Title}}</span>
         </h2>
         <div id="article-markdown3" class="show-list-numbers-and-dots">
+            <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">Source: {{article.SourceTitle}}</p>
             <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">{{article.Author}} | {{article.Date}}</p>
         </div>
         <div style="margin-top :5%; margin-bottom:5%;">
@@ -15,27 +16,29 @@
         <div id="article-markdown2" class="show-list-numbers-and-dots normalBlackLetters">
             <span ng-class="getFontClass()" style="line-height: 1.2" ng-style="fontsize">{{article.Content}}</span>
         </div>
-        <div class="spacer" style="width: 100%; height: 1%;"></div>
-        <ion-list id="article-list15">
-            <div class="card">
-                <div class="item item-text-wrap" ng-class="getBackgroundClass()">
-                    <h2 ng-class="getNightmodeHeaderClass()">Name 1</h2>
-                    <p ng-class="getNightmodeHeaderClass()">Comment 1</p>
+        <div class="spacer" style="width: 100%; height: 2%;"></div>
+
+        <div ng-click="visible = !visible">
+            <p ng-class="getFontClass()" style="margin-bottom: 0;">
+                <i class="icon" ng-class="visible ? 'ion-ios-arrow-right' : 'ion-ios-arrow-down'"></i> Comments</p>
+        </div>
+        <div ng-hide="visible">
+            <div class="list card" ng-repeat="comment in article.comments" ng-class="getBackgroundClass()">
+                <div class="item item-avatar">
+                    <img src="img/avatar.png">
+                    <h2>{{comment.Name}}</h2>
                 </div>
-                <div class="item item-text-wrap" ng-class="getBackgroundClass()">
-                    <h2 ng-class="getNightmodeHeaderClass()">Name 1</h2>
-                    <p ng-class="getNightmodeHeaderClass()">Comment 1</p>
-                </div>
-                <div class="item item-text-wrap" ng-class="getBackgroundClass()">
-                    <h2 ng-class="getNightmodeHeaderClass()">Name 1</h2>
-                    <p ng-class="getNightmodeHeaderClass()">Comment 1</p>
+
+                <div class="item item-body">
+                    <p style="margin-top:0">{{comment.Content}}</p>
                 </div>
             </div>
-        </ion-list>
-        <div class="spacer" style="width: 100%; height: 1%;"></div>
+        </div>
+
+        <div class="spaced" style="width: 100%; height:2%" ng-hide="!visible"></div>
 
         <div ng-class="getBackgroundClass()" ng-if="user.isJournalist">
-            <p ng-class="getFontClass()">Notes:</p>
+            <p ng-class="getFontClass()">Notes</p>
             <ion-item style="height:200px;">
                 <textarea type="note" ng-model="currentNotes.note" ng-blur="saveNotes()" style="width:100%; height:100%;"></textarea>
             </ion-item>
