--- a/Promotional Website/css/design.css
+++ b/Promotional Website/css/design.css
@@ -1,3 +1,7 @@
+html {
+    overflow: -moz-scrollbars-vertical; 
+    overflow-y: scroll;
+}
 .navShift{
     position:absolute;
     right:5%;
@@ -13,9 +17,24 @@
     width:225px;
     height:450px;
     text-align:center;
+    margin-top:-8%;
+    margin-right:10%;
+    margin-bottom:20%;
+}
+
+.title{
+    color:white;
+    font-size:30px;
+    margin-left:12%;
     margin-top:5%;
-    margin-right:15%;
-    margin-bottom:5%;
+}
+
+.circleImg{
+    width:200px;
+    height:200px;
+    margin-top:3%;
+    margin-right:5%;
+    text-align: center;
 }
 
 .paragraph{
