--- a/Mobile_App/www/templates/addSources.html
+++ b/Mobile_App/www/templates/addSources.html
@@ -6,12 +6,15 @@
         </label>
     </ion-header-bar>
     <ion-content padding="false" class="has-header generalPadding" ng-class="getBackgroundClass()">
-        <div ng-if="isOnline">
+        <div ng-if="isOnline && !isLoading">
             <div ng-repeat="source in sources | filter : { Title:input.userSearch }">
                 <ion-checkbox ng-class="getBackgroundClass()" id="addSources-checkbox3" ng-checked="source.checked" ng-click="select_deselectSource(source.Title)">
                     <span ng-style="fontsize" ng-class="getFontClass()" class="normalBlackLetters">{{source.Title}}</span>
                 </ion-checkbox>
             </div>
+        </div>
+        <div ng-if="isOnline && isLoading" style="width:inherit; text-align: center; padding-top: 25%">
+            <ion-spinner icon="crescent"></ion-spinner><br>Loading sources...
         </div>
         <div ng-if="!isOnline">
             <ion-list>
