--- a/Mobile_App/www/templates/article.html
+++ b/Mobile_App/www/templates/article.html
@@ -7,14 +7,23 @@
             <span class="boldLetters" ng-style="fontsize">{{article.Title}}</span>
         </h2>
         <div id="article-markdown3" class="show-list-numbers-and-dots">
-            <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">Source: {{article.SourceTitle}}</p>
-            <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">{{article.Author}} | {{article.Date}}</p>
+            <div class="row">
+                <div class="col-md-10">
+                    <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">Source: {{article.SourceTitle}}</p>
+                    <p ng-class="getNightmodeHeaderClass()" ng-style="fontsize" class="sideLetters">{{article.Author}} | {{article.Date}}</p>
+                </div>
+                <div class="col">
+                    <p ng-if="article.SentimentGrade > 0" style="text-align: center;">:)</p>
+                    <p ng-if="article.SentimentGrade == 0" style="text-align: center;">:|</p>
+                    <p ng-if="article.SentimentGrade < 0" style="text-align: center;">:(</p>
+                </div>
+            </div>
         </div>
         <div style="margin-top :5%; margin-bottom:5%;">
-            <img alt="Article image" ng-src="{{article.PictureSrc}}" height="100%" width="100%" style="vertical-align: middle;">
+            <img alt="Article image" ng-src=".{{article.PictureSrc}}" height="100%" width="100%" style="vertical-align: middle;">
         </div>
         <div id="article-markdown2" class="show-list-numbers-and-dots normalBlackLetters">
-            <span ng-class="getFontClass()" style="line-height: 1.2" ng-style="fontsize">{{article.Content}}</span>
+            <span ng-class="getFontClass()" style="line-height: 1.2" ng-style="fontsize" ng-bind-html="article.Content"></span>
         </div>
         <div class="spacer" style="width: 100%; height: 2%;"></div>
 
