--- a/Mobile_App/www/templates/tutorial.html
+++ b/Mobile_App/www/templates/tutorial.html
@@ -44,7 +44,6 @@
           <i style="display:inline-block;" class="icon ion-android-star-outline"></i> to save the article.</p>
         <img src="img/articleSlide.png">
         <p>3. The article will be saved in the "Saved" in the side menu.</p>
-        <img src="img/savedArticles.png">
       </ion-slide-page>
 
       <ion-slide-page class="generalTutorial">
@@ -57,7 +56,6 @@
           <i style="display:inline-block;" class="icon ion-alert-circled"></i> to report the article.</p>
         <img src="img/articleSlide.png">
         <p>3. Check the reason you want to report the article.</p>
-        <img src="img/reportModal.png">
       </ion-slide-page>
 
       <ion-slide-page class="generalTutorial">
@@ -66,7 +64,9 @@
           <h3 class="boldLetters">View Statistics</h3>
         </div>
         <p>1. Click "Statistics" in the side menu.</p>
-        <p>2. To see the statistics of a source use the drop down "Select Sources" and select one.</p>
+        <p>2. By fetching statistics it present the statistics of all the sources or the one you select.</p>
+        <p>3. Different type of statistics can be selected only for all sources.</p>
+        <img src="img/statistics.png">
       </ion-slide-page>
 
       <ion-slide-page class="generalTutorial">
@@ -74,10 +74,8 @@
         <div>
           <h3 class="boldLetters">View Statistics</h3>
         </div>
-        <p>3. To change the statistic's type, use the drop down "View Statistics".</p>
-        <p> Report: The percentage of reported articles of a source.</p>
-        <p> Hate speech: The percentage of hate speech in articles or in the comments of a source.</p>
-        <p> Sentiment Analysis: The percenage of negative, positive and neutral response of a source.</p>
+        <p>4."View Statistics" (Report counter, Click counter and Setiment Analysis).</p>
+        <img src="img/graph.png">
       </ion-slide-page>
 
       <ion-slide-page class="generalTutorial">
