Worked on AngularJS and Front-End
- Bug fixes and optimizations
- Fixed tooltip when tapping on statistics
- Replaced shared properties factory with session storage
- Added save/delete/report buttons in article view
- When an article is reported it can't be reported again to avoid spamming
- Added popover on article sentiment emote for informational purposes

--- a/Mobile_App/www/templates/login.html
+++ b/Mobile_App/www/templates/login.html
@@ -20,7 +20,7 @@
             </ul>
             <div class="spacer" style="height: 3%;"></div>
             <button ng-disabled="loginform.$invalid" class="button button-stable button-block" ng-click="login()">Log in</button>
-            <a ui-sref="signup()" style="color:#455A64" id="login-button4" class="button button-block button-clear">Or create an account</a>
+            <a ui-sref="signup()" style="color:#455A64; text-decoration: underline; font-size: 110%" id="login-button4" class="button button-block button-clear">Create an account</a>
         </form>
     </ion-content>
 </ion-view>
