--- a/Mobile_App/www/templates/tutorial.html
+++ b/Mobile_App/www/templates/tutorial.html
@@ -1,5 +1,5 @@
 <ion-modal-view class="tutorialModal">
-  <ion-content ng-controller="tutorialCtrl">
+  <ion-content ng-controller="eyeReaderCtrl">
     <ion-slides options="options" slider="data.slider">
       <ion-slide-page class="generalTutorial">
           <button class="button button-right button-light icon ion-close" ng-click="closeModal()"></button>
