--- a/Mobile_App/www/css/generalStylling.css
+++ b/Mobile_App/www/css/generalStylling.css
@@ -7,8 +7,25 @@ sub {
     color: #90A4AE;
 }
 
-select[disabled] {
-   background-color: #F5F5F5; 
+@media screen {
+    .modal-backdrop-bg {
+    -webkit-transition: opacity 300ms ease-in-out;
+    transition: opacity 300ms ease-in-out;
+    background-color: #000;
+    opacity: 0; }
+  .active .modal-backdrop-bg {
+    opacity: 0.5; }
+}
+
+.popover {
+    height: auto !important;
+}
+.popover ion-header-bar {
+    position: relative;
+}
+.popover ion-content {
+    top: 0;
+    position: relative;
 }
 
 .chartWrapper {
