--- a/Mobile_App/www/templates/newsFeed.html
+++ b/Mobile_App/www/templates/newsFeed.html
@@ -22,7 +22,7 @@
                     <p ng-style="fontsizeSmaller" ng-class="getFontClass()">Source: {{article.SourceTitle}}</p>
                     <p ng-style="fontsizeSmaller" class="sideLetters">{{article.Content}}</p>
                     <i class="icon ion-ios-arrow-right icon-accessory"></i>
-                    <ion-option-button ng-show="isOnline" class="button-energized" ng-click="showReportOptions({{article.Id}})">
+                    <ion-option-button ng-show="isOnline && !isArticleReported({{article.Id}})" class="button-energized" ng-click="showReportOptions({{article.Id}})">
                         <ion-icon name="report" class="icon ion-alert-circled"></ion-icon>
                     </ion-option-button>
                     <ion-option-button class="button-assertive" ng-click="showDeleteConfirm({{article.Id}})">
