--- a/Mobile_App/www/templates/settings.html
+++ b/Mobile_App/www/templates/settings.html
@@ -62,7 +62,7 @@
                 </ul>
             </ion-toggle>
 
-            <li ng-class="getBackgroundClass()" style="padding-top:16px" class="item range" ng-cloak>
+            <li ng-class="getBackgroundClass()" style="padding-top:16px" class="item range" ng-hide="!data.markupEnabled && !data.hideEnabled" ng-cloak>
                 <ul>
                     <li>
                         <span ng-class="getFontClass()" ng-style="selectedFontsize">Tolerance</span>
@@ -71,11 +71,11 @@
                         <sub>The higher the<wbr> tolerance the<wbr> more tolerant<wbr> you<wbr> are against<wbr> toxic content</sub>
                     </li>
                     <li>
-                        <sub>{{data.tolerance}}%</sub>
+                        <sub ng-style="selectedFontsize">{{data.tolerance}}%</sub>
                     </li>
                 </ul>
             </li>
-            <li ng-class="getBackgroundClass()" style="border-top:0px;padding-bottom:16px" class="item range" ng-cloak>
+            <li ng-hide="!data.markupEnabled && !data.hideEnabled" ng-class="getBackgroundClass()" style="border-top:0px;padding-bottom:16px" class="item range" ng-cloak>
                 <input ng-model="data.tolerance" type="range" min="0" max="100" step="1" name="Tolerance Level Range">
             </li>
         </ul>
