--- a/Mobile_App/www/templates/statistics.html
+++ b/Mobile_App/www/templates/statistics.html
@@ -9,7 +9,7 @@
                     <select ng-class="getFontClass()" ng-options="o.id as o.name for o in selectSource" ng-model="stat.selectedSource"></select>
                 </label>
 
-                <label class="item item-input item-select" ng-class="getBackgroundClass()">
+                <label ng-hide="stat.selectedSource > 0" class="item item-input item-select" ng-class="getBackgroundClass()">
                     <div class="input-label">
                         <span ng-style="fontsize" ng-class="getFontClass()">View Statistics</span>
                     </div>
@@ -25,7 +25,7 @@
             <div class="chartWrapper" ng-if="!isLoading">
                 <div class="chartAreaWrapper">
                     <canvas id="line" ng-if="r == 0" class="chart chart-bar" chart-data="barData" chart-labels="barLbls" chart-series="barSeries"
-                        chart-options="allSourcesOptions" chart-dataset-override="barDatasetOverride" style="width:100%; height:56%; min-width:750px; min-height:400px"></canvas>
+                        chart-options="allSourcesOptions" style="width:100%; height:56%; min-width:750px; min-height:400px"></canvas>
                     <canvas ng-if="r == 1" class="chart chart-bar" chart-data="barData" chart-labels="barLbls" chart-series="barSeries" chart-options="sourceOptions"
                         style="width:100%; height:56%; min-height:400px; min-width:100%"></canvas>
                 </div>
